# apps/api/src/app.module.ts
@@ -6,6 +6,7 @@ import { ApplicationsModule } from './modules/applications/applications.module';
 import { AuthModule } from './modules/auth/auth.module';
 import { CalculatorsModule } from './modules/calculators/calculators.module';
 import { DocumentsModule } from './modules/documents/documents.module';
+import { LoanProgramsModule } from './modules/loan-programs/loan-programs.module';
 import { StorageModule } from './storage/storage.module';
 import { HealthModule } from './modules/health/health.module';
 import { PrismaModule } from './prisma/prisma.module';
@@ -34,6 +35,7 @@ import { PrismaModule } from './prisma/prisma.module';
     ApplicationsModule,
     CalculatorsModule,
     DocumentsModule,
+    LoanProgramsModule,
     HealthModule,
   ],
 })
