# apps/api/src/modules/loan-programs/loan-programs.module.ts
@@ -1,0 +1,10 @@
+import { Module } from '@nestjs/common';
+
+import { LoanProgramsController } from './loan-programs.controller';
+import { LoanProgramsService } from './loan-programs.service';
+
+@Module({
+  controllers: [LoanProgramsController],
+  providers: [LoanProgramsService],
+})
+export class LoanProgramsModule {}
